--- a/login.html
+++ b/login.html
@@ -41,24 +41,27 @@
         <!-- The <label> tag defines a label for several elements -->
         <!-- ازین تگ استفاده کردم تا اینپوت های مختلفی ک دارمو نام گذاری کنم  -->
         <!-- تگ اینپوت برای ساختن فیلد های پرکردنی دکمه و ... هست که تایپ های مختلفی داره -->
+        <!-- اینجا با استفاده از رویداد آن بلور و تعریف دو تابع مختلف با چک کردن ورودی کاربر پیغامی را به کاربر نشان میدهد -->
+        <form class="from-1" name="loginForm">
+          <label for="telephone" id="telLab">Telephone Number :</label>
+          <input
+            id="logTel"
+            type="tel"
+            name="telephone"
+            placeholder="09124567890"
+            onblur=" validateNumber()"
+          />
 
-        <form class="from-1" action="">
-          <label for=""
-            >Telephone Number :
-            <input type="tel" placeholder="+98" pattern="[0-9]{11}" required />
-          </label>
+          <label for="password" id="passLab">Password : </label>
+          <input
+            id="logPass"
+            name="password"
+            type="password"
+            placeholder="********"
+            onblur="validatePassword()"
+          />
 
-          <label for=""
-            >Password :
-            <input
-              type="password"
-              placeholder="********"
-              minlength="8"
-              required
-            />
-          </label>
-
-          <input type="submit" value="Login" />
+          <input type="submit" name="submit" value="Login" />
 
           <!-- از این تگ دیو استفاده کردم تا قسمتیو اختصاص بدم به چک باکس یاداوری و
              فراموشی رمز تا بتونم چیدمان اون هارو کنترل کنم و برای ساختشون از یک لیبل و اینپوت و تگ لینک دار کردن استفاده کردم -->
@@ -74,5 +77,6 @@
         </form>
       </div>
     </section>
+    <script src="app.js" defer></script>
   </body>
 </html>
