--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
         <!-- این تگ رو استفاده کردم همراه یه تک لینک دار تا بتونم مخاطبی ک اکانت نداره رو به ریجیستر کردن راهنمایی کنم -->
 
         <p>
-          Don't have an account? <a href="">Creat Your Account</a> it takes less
+          Don't have an account? <a href="Registerr.html">Creat Your Account</a> it takes less
           than a minute
         </p>
 
