--- a/login.html
+++ b/login.html
@@ -78,5 +78,6 @@
       </div>
     </section>
     <script src="app.js" defer></script>
+    <script src="farawin.js"></script>
   </body>
 </html>
