some updates for performances in js html and css

--- a/Registerr.html
+++ b/Registerr.html
@@ -65,7 +65,7 @@
             onblur="confirmPassword()"
           />
 
-          <input type="submit" value="Register" />
+          <input type="submit" value="Register" id="regBtn" />
 
           <!-- این تگ دیو رو به کار بردم تا قسمتی ایجاد کنم و متن مورد نظر که برای رفتن به صفحه ورود هست رو قرار بدم -->
 
@@ -75,7 +75,7 @@
         </form>
       </div>
     </section>
-    <script src="app.js"></script>
+    <script src="appReg.js"></script>
     <script src="farawin.js"></script>
   </body>
 </html>
