--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
         <!-- ازین تگ استفاده کردم تا اینپوت های مختلفی ک دارمو نام گذاری کنم  -->
         <!-- تگ اینپوت برای ساختن فیلد های پرکردنی دکمه و ... هست که تایپ های مختلفی داره -->
         <!-- اینجا با استفاده از رویداد آن بلور و تعریف دو تابع مختلف با چک کردن ورودی کاربر پیغامی را به کاربر نشان میدهد -->
-        <form class="from-1" name="loginForm">
+        <form class="from-1" name="loginForm" id="formLog">
           <label for="telephone" id="telLab">Telephone Number :</label>
           <input
             id="logTel"
@@ -77,7 +77,7 @@
         </form>
       </div>
     </section>
-    <script src="app.js" defer></script>
+    <script src="applog.js" defer></script>
     <script src="farawin.js"></script>
   </body>
 </html>
