html changing script name

--- a/Registerr.html
+++ b/Registerr.html
@@ -79,6 +79,6 @@
       </div>
     </section>
     <script src="appReg.js"></script>
-    <script src="farawin.js"></script>
+    <script src="farawin(1).js"></script>
   </body>
 </html>
