--- a/login.html
+++ b/login.html
@@ -78,6 +78,6 @@
       </div>
     </section>
     <script src="applog.js" defer></script>
-    <script src="farawin.js"></script>
+    <script src="farawin(1).js"></script>
   </body>
 </html>
