last update for farawin api (type=button , value)

--- a/Registerr.html
+++ b/Registerr.html
@@ -68,7 +68,7 @@
           <label for="name" id="nameLabel">Your Name</label>
           <input type="text" id="nameReg" name="name" placeholder="Mohammad" onblur="nameConf()">
 
-          <input type="submit" value="Register" id="regBtn" />
+          <input type="button" value="Register" id="regBtn" />
 
           <!-- این تگ دیو رو به کار بردم تا قسمتی ایجاد کنم و متن مورد نظر که برای رفتن به صفحه ورود هست رو قرار بدم -->
 
