--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
             onblur="validatePassword()"
           />
 
-          <input type="submit" name="submit" value="Login" id="loginBtn"   />
+          <input type="button" name="submit" value="Login" id="loginBtn"   />
 
           <!-- از این تگ دیو استفاده کردم تا قسمتیو اختصاص بدم به چک باکس یاداوری و
              فراموشی رمز تا بتونم چیدمان اون هارو کنترل کنم و برای ساختشون از یک لیبل و اینپوت و تگ لینک دار کردن استفاده کردم -->
